<resources>
    <string name="app_name">HealthyShop</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>

    <string name="title">Welcome To HealthyShop</string>
    <string name="users">User : </string>
    <string name="pass">Password : </string>
    <string name="login">Login </string>
    <string name="cancel">ยกเลิก</string>
    <string name="buy">สั่งซื้อ</string>
    <string name="ordertotal">รายการที่สั่ง</string>
    <string name="totalbath">ชำระเงิน</string>
    <string name="confirm">ตกลง</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>

</resources>
