<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comsci.kwan.healthtest.MenuHealth">

    <TextView
        android:id="@+id/txtmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textSize="@dimen/h2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncancel"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="onClickBackMenu"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnorder"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnorder"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:onClick="onClickTotalorder"
        android:text="@string/ordertotal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btncancel" />

    <ListView
        android:id="@+id/livmenu"
        android:layout_width="370dp"
        android:layout_height="400dp"
        android:layout_marginTop="9dp"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtmenu"
        tools:layout_editor_absoluteX="9dp" />

</android.support.constraint.ConstraintLayout>
